<?xml version="1.0"?>
<package>
  <name>wireless_msgs</name>
  <version>0.0.5</version>
  <description>Messages for describing aspects of a wireless network, connection, etc.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
