<?xml version="1.0"?>
<package format="2">
  <name>wireless_watcher</name>
  <version>0.1.1</version>
  <description>A Python-based which publishes connection information about a linux wireless interface.</description>

  <maintainer email="mpurvis@clearpath.ai">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>wireless_msgs</exec_depend>
  <exec_depend>wireless-tools</exec_depend>
</package>
