<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wireless_watcher</name>
  <version>1.0.1</version>
  <description>A node which publishes connection information about a linux wireless interface.</description>

  <author>Mike Purvis</author>

  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>wireless_msgs</depend>
  <depend>wireless-tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
